# ZUM

./: CMakeLists.txt  README.md
hw01/: .gitignore  CMakeLists.txt  hw01.cpp
hw01/dataset_test/: U_shape.txt  atest.txt
hw02/: hw02.cpp  viz.py
hw03/: Plan.txt  sliding.pddl  sliding3.pddl
semestral/: checkers.cpp  checkers.h  games.h  main.cpp  micro_chess.cpp  micro_chess.h  minimax.cpp  minimax.h  protocol.md  state.h  tic_tac_toe.cpp  tic_tac_toe.h
